--- a/RedlineRestorationsLess/style.css
+++ b/RedlineRestorationsLess/style.css
@@ -172,6 +172,27 @@ h1,h2,h3,h4,h5,h6 {
 	text-decoration:none;
 }
 
+@media (max-width:1100px) {
+	.fixed-menu-bar ul {
+		margin-left:280px;
+	}
+}
+
+@media (max-width:1000px) {
+	.fixed-menu-bar ul {
+		margin-left:250px;
+	}
+
+	.fixed-menu-bar img {
+		margin-left:-75%;
+	}
+
+	.fixed-menu-bar ul li {
+		font-size:15px;
+		margin-right:10px;
+	}
+}
+
 /* Social Icons */
 
 .fixed-social-menu{
@@ -517,12 +538,20 @@ font-size:15px;
 }
 
 .aboutus-individual-frame {
-	width:785px;
+	width:1000px;
 	height:479px;
 	position:absolute;
 	top: 0;
 	margin-top: 100px;
-	margin-left:-785px;
+	margin-left:-1000px;
+}
+
+.aboutus-individual-frame-overlay {
+	float:left;
+	width:215px;
+	background-color:rgba(255,255,255,.8);
+	height:100%;
+	cursor:pointer;
 }
 
 .aboutus-individual-frame-text {
@@ -1021,7 +1050,7 @@ margin-bottom: 11px;
 
 .contact-phone h6 {
 	margin-left: 15px;
-	width: 86%;
+	width: 89%;
 }
 
 .contact-address {
